fix: crash when clicking `Previous Difference` without visual lines (#1385)
Always scroll to top when the state of `Show All Lines` changed

Signed-off-by: leo <longshuang@msn.cn>

--- a/src/Views/DiffView.axaml
+++ b/src/Views/DiffView.axaml
@@ -122,7 +122,7 @@
 
             <ToggleButton Classes="line_path"
                           Width="28"
-                          Command="{Binding ToggleFullTextDiff}"
+                          Click="OnUseFullTextDiffClicked"
                           IsChecked="{Binding Source={x:Static vm:Preferences.Instance}, Path=UseFullTextDiff, Mode=OneWay}"
                           IsVisible="{Binding IsTextDiff}"
                           ToolTip.Tip="{DynamicResource Text.Diff.VisualLines.All}">
