--- a/src/Views/FileHistories.axaml
+++ b/src/Views/FileHistories.axaml
@@ -161,6 +161,26 @@
                               </ToggleButton.IsVisible>
                               <Path Width="13" Height="13" Data="{StaticResource Icons.SyntaxHighlight}" Margin="0,3,0,0"/>
                             </ToggleButton>
+                            <ToggleButton Grid.Column="2"
+                                          Classes="line_path"
+                                          Width="28"
+                                          Background="Transparent"
+                                          IsChecked="{Binding Source={x:Static vm:Preferences.Instance}, Path=NoImageFiltering, Mode=TwoWay}"
+                                          ToolTip.Tip="{DynamicResource Text.Diff.NoImageFiltering}">
+                              <ToggleButton.IsVisible>
+                                <MultiBinding Converter="{x:Static BoolConverters.Or}">
+                                  <Binding Path="Content"
+                                            Mode="OneWay"
+                                            Converter="{x:Static c:ObjectConverters.IsTypeOf}"
+                                            ConverterParameter="{x:Type m:RevisionImageFile}"/>
+                                  <Binding Path="Content"
+                                            Mode="OneWay"
+                                            Converter="{x:Static c:ObjectConverters.IsTypeOf}"
+                                            ConverterParameter="{x:Type vm:RevisionLFSImage}"/>
+                                </MultiBinding>
+                              </ToggleButton.IsVisible>
+                              <Path Width="14" Height="14" Stretch="Uniform" Data="{StaticResource Icons.NoImageFiltering}" Margin="0,3,0,0"/>
+                            </ToggleButton>
                           </Grid>
                         </Border>
 
