--- a/src/Views/Blame.axaml
+++ b/src/Views/Blame.axaml
@@ -42,8 +42,24 @@
     </Grid>
 
     <!-- File -->
-    <Border Grid.Row="1" Padding="8,0">
-      <TextBlock Text="{Binding Title}" VerticalAlignment="Center"/>
+    <Border Grid.Row="1" Padding="8,0" >
+      <Grid>
+        <TextBlock Text="{Binding Title}" VerticalAlignment="Center"/>
+        <StackPanel HorizontalAlignment="Right" VerticalAlignment="Center" Orientation="Horizontal">
+          <Button Classes="icon_button"
+                  IsEnabled="{Binding CanMoveBack}"
+                  Width="28"
+                  Click="HistoryBack">
+            <Path Width="12" Height="12" Stretch="Uniform" Data="{StaticResource Icons.TriangleLeft}"/>
+          </Button>
+          <Button Classes="icon_button"
+                  IsEnabled="{Binding CanMoveForward}"
+                  Width="28"
+                  Click="HistoryForward">
+            <Path Width="12" Height="12" Stretch="Uniform" Data="{StaticResource Icons.TriangleRight}"/>
+          </Button>
+        </StackPanel>
+      </Grid>
     </Border>
 
     <!-- Body -->
