--- a/src/Views/RevisionFileContentViewer.axaml
+++ b/src/Views/RevisionFileContentViewer.axaml
@@ -49,15 +49,59 @@
     </DataTemplate>
 
     <DataTemplate DataType="m:RevisionLFSObject">
-      <StackPanel Orientation="Vertical" HorizontalAlignment="Center" VerticalAlignment="Center">
-        <TextBlock Text="{DynamicResource Text.CommitDetail.Files.LFS}" FontSize="18" FontWeight="Bold" HorizontalAlignment="Center" Foreground="{DynamicResource Brush.FG2}"/>
-        <Path Width="64" Height="64" Margin="0,24,0,0" Data="{StaticResource Icons.LFS}" Fill="{DynamicResource Brush.FG2}"/>
-        <SelectableTextBlock Margin="0,16,0,0" Text="{Binding Object.Oid}" HorizontalAlignment="Center" Foreground="{DynamicResource Brush.FG2}"/>
-        <StackPanel Margin="0,8,0,0" Orientation="Horizontal" HorizontalAlignment="Center">
-          <TextBlock Classes="primary" Text="{Binding Object.Size}" Foreground="{DynamicResource Brush.FG2}"/>
-          <TextBlock Text="{DynamicResource Text.Bytes}" Margin="8,0,0,0" Foreground="{DynamicResource Brush.FG2}"/>
-        </StackPanel>
-      </StackPanel>
+      <v:RevisionFileLFSContentViewer/>
+    </DataTemplate>
+
+    <DataTemplate DataType="vm:RevisionLFSImageObject">
+      <TabControl Margin="0,8,0,0" SelectedIndex="{Binding Source={x:Static vm:Preferences.Instance}, Path=LFSImageDiffActiveIdx, Mode=TwoWay}">
+        <TabControl.Styles>
+          <Style Selector="TabControl /template/ ItemsPresenter#PART_ItemsPresenter > WrapPanel">
+            <Setter Property="HorizontalAlignment" Value="Center"/>
+          </Style>
+        </TabControl.Styles>
+
+        <TabItem>
+          <TabItem.Header>
+            <TextBlock Text="LFS" FontWeight="Bold" />
+          </TabItem.Header>
+
+          <ContentControl Content="{Binding LFS}">
+            <ContentControl.DataTemplates>
+              <DataTemplate DataType="m:RevisionLFSObject">
+                <v:RevisionFileLFSContentViewer/>
+              </DataTemplate>
+            </ContentControl.DataTemplates>
+          </ContentControl>
+        </TabItem>
+
+        <TabItem>
+          <TabItem.Header>
+            <TextBlock Text="IMAGE" FontWeight="Bold" />
+          </TabItem.Header>
+
+          <ContentControl Content="{Binding Image}">
+            <Grid RowDefinitions="*,Auto" Margin="0,8" VerticalAlignment="Center" HorizontalAlignment="Center">
+              <Border Grid.Row="0" Effect="drop-shadow(0 0 8 #A0000000)">
+                <Border Background="{DynamicResource Brush.Window}">
+                  <Border BorderThickness="1" BorderBrush="{DynamicResource Brush.Border1}" Margin="8">
+                    <v:ImageView Image="{Binding Image.Image}"/>
+                  </Border>
+                </Border>
+              </Border>
+
+              <StackPanel Grid.Row="1" Margin="0,8,0,0" Orientation="Horizontal" HorizontalAlignment="Center">
+                <Border Height="16" Background="Green" CornerRadius="8" VerticalAlignment="Center">
+                  <TextBlock Classes="primary" Text="{Binding Image.ImageType}" Margin="8,0" FontSize="10" Foreground="{DynamicResource Brush.BadgeFG}"/>
+                </Border>
+
+                <TextBlock Classes="primary" Text="{Binding Image.ImageSize}" Margin="8,0,0,0"/>
+                <TextBlock Classes="primary" Text="{Binding Image.FileSize}" Foreground="{DynamicResource Brush.FG2}" Margin="8,0,0,0"/>
+                <TextBlock Classes="primary" Text="{DynamicResource Text.Bytes}" Foreground="{DynamicResource Brush.FG2}" Margin="2,0,0,0"/>
+              </StackPanel>
+            </Grid>
+          </ContentControl>
+        </TabItem>
+      </TabControl>
     </DataTemplate>
 
     <DataTemplate DataType="m:RevisionSubmodule">
