--- a/src/Views/InitGitFlow.axaml
+++ b/src/Views/InitGitFlow.axaml
@@ -46,7 +46,7 @@
                Height="26"
                VerticalAlignment="Center"
                CornerRadius="2"
-               Text="{Binding FeturePrefix, Mode=TwoWay}"/>
+               Text="{Binding FeaturePrefix, Mode=TwoWay}"/>
 
       <TextBlock Grid.Row="4" Grid.Column="0"
                  HorizontalAlignment="Right" VerticalAlignment="Center"
