--- a/src/Views/Repository.axaml
+++ b/src/Views/Repository.axaml
@@ -229,7 +229,10 @@
                       Margin="8,0,0,0"
                       Click="OnOpenSortLocalBranchMenu"
                       ToolTip.Tip="{DynamicResource Text.Repository.BranchSort}">
-                <Path Width="12" Height="12" Data="{StaticResource Icons.Order}"/>
+                <Grid>
+                  <Path Width="12" Height="12" Data="{StaticResource Icons.OrderByName}" IsVisible="{Binding IsSortingLocalBranchByName, Mode=OneWay}"/>
+                  <Path Width="12" Height="12" Data="{StaticResource Icons.OrderByTime}" IsVisible="{Binding !IsSortingLocalBranchByName, Mode=OneWay}"/>
+                </Grid>
               </Button>
               <Button Grid.Column="3" Classes="icon_button" Width="14" Margin="8,0" Command="{Binding CreateNewBranch}" ToolTip.Tip="{DynamicResource Text.Repository.NewBranch}">
                 <Path Width="12" Height="12" Data="{StaticResource Icons.Branch.Add}"/>
@@ -259,7 +262,10 @@
                       Margin="8,0,0,0"
                       Click="OnOpenSortRemoteBranchMenu"
                       ToolTip.Tip="{DynamicResource Text.Repository.BranchSort}">
-                <Path Width="12" Height="12" Data="{StaticResource Icons.Order}"/>
+                <Grid>
+                  <Path Width="12" Height="12" Data="{StaticResource Icons.OrderByName}" IsVisible="{Binding IsSortingRemoteBranchByName, Mode=OneWay}"/>
+                  <Path Width="12" Height="12" Data="{StaticResource Icons.OrderByTime}" IsVisible="{Binding !IsSortingRemoteBranchByName, Mode=OneWay}"/>
+                </Grid>
               </Button>
               <Button Grid.Column="3" Classes="icon_button" Width="14" Margin="8,0" Command="{Binding AddRemote}" ToolTip.Tip="{DynamicResource Text.Repository.Remotes.Add}">
                 <Path Width="12" Height="12" Data="{StaticResource Icons.Remote.Add}"/>
@@ -294,7 +300,10 @@
                       Margin="8,0,0,0"
                       Click="OnOpenSortTagMenu"
                       ToolTip.Tip="{DynamicResource Text.Repository.Tags.Sort}">
-                <Path Width="12" Height="12" Margin="0,2,0,0" Data="{StaticResource Icons.Order}"/>
+                <Grid>
+                  <Path Width="12" Height="12" Data="{StaticResource Icons.OrderByName}" IsVisible="{Binding IsSortingTagsByName, Mode=OneWay}"/>
+                  <Path Width="12" Height="12" Data="{StaticResource Icons.OrderByTime}" IsVisible="{Binding !IsSortingTagsByName, Mode=OneWay}"/>
+                </Grid>
               </Button>
               <Button Grid.Column="4"
                       Classes="icon_button"
